--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
+    "node-cron": "^4.2.1",
     "pg": "^8.18.0",
     "pino": "^10.3.0",
     "pino-http": "^11.0.0",
@@ -74,6 +75,7 @@
     "@types/express-serve-static-core": "^5.1.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.1",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^4.0.18",
